crates/pg_syntax/tests/snapshots/postgres_regress/tsdicts@49.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ts_lexize('hunspell_long', 'ballsklubber');"
---
SelectStmt@0..50
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..48
    FuncCall@7..48
      Ident@7..16 "ts_lexize"
      Ascii40@16..17 "("
      AConst@17..32
        Sconst@17..32 "'hunspell_long'"
      Ascii44@32..33 ","
      Whitespace@33..34 " "
      AConst@34..48
        Sconst@34..48 "'ballsklubber'"
  Ascii41@48..49 ")"
  Ascii59@49..50 ";"

